--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero's Treasure</title>
 
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="map">
+      <div class="hero"></div>
 
-        <div class="hero"></div>
+      <div class="ghost"></div>
 
-        <div class="ghost"></div>
-
-        <div class="treasure"></div>
-
+      <div class="treasure"></div>
     </div>
 
     <script src="js/game.js"></script>
 
-</body>
+    <div class="victory"></div>
+  </body>
 </html>
